--- a/Depo/Depo/Presentation/UserStories/Settings/ContactSync/ContactsBackupHistory/View/View/ContactsBackupHistoryView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/ContactSync/ContactsBackupHistory/View/View/ContactsBackupHistoryView.xib
@@ -49,7 +49,7 @@
                         <constraint firstItem="eAP-yf-ibi" firstAttribute="leading" secondItem="zZb-K9-hPU" secondAttribute="leading" constant="16" id="zJp-yq-Uxr"/>
                     </constraints>
                 </view>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" style="plain" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Rvl-Gt-mCm">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Rvl-Gt-mCm">
                     <rect key="frame" x="0.0" y="136" width="414" height="598"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                     <inset key="separatorInset" minX="16" minY="0.0" maxX="16" maxY="0.0"/>
