--- a/Depo/Depo/Presentation/UserStories/Settings/ContactSync/DeleteDuplicatesContacts/Views/BackUpContactsCard.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/ContactSync/DeleteDuplicatesContacts/Views/BackUpContactsCard.xib
@@ -11,20 +11,20 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="BackUpContactsCard" customModule="LifeTech_lifedrive" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="158"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="118"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CCW-Xh-32N">
-                    <rect key="frame" x="16" y="20" width="382" height="118"/>
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="118"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k5E-h8-knD">
-                            <rect key="frame" x="16" y="16" width="350" height="21"/>
+                            <rect key="frame" x="16" y="16" width="382" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Fl-7M-tPa">
-                            <rect key="frame" x="16" y="45" width="350" height="21"/>
+                            <rect key="frame" x="16" y="45" width="382" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -56,16 +56,15 @@
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="CCW-Xh-32N" secondAttribute="trailing" constant="16" id="7ty-Bc-t3e"/>
-                <constraint firstItem="CCW-Xh-32N" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="IMG-tt-d2r"/>
-                <constraint firstAttribute="bottom" secondItem="CCW-Xh-32N" secondAttribute="bottom" constant="20" id="NUd-R3-w7Z"/>
-                <constraint firstItem="CCW-Xh-32N" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="pxx-bD-gd8"/>
+                <constraint firstAttribute="trailing" secondItem="CCW-Xh-32N" secondAttribute="trailing" id="7ty-Bc-t3e"/>
+                <constraint firstItem="CCW-Xh-32N" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="IMG-tt-d2r"/>
+                <constraint firstAttribute="bottom" secondItem="CCW-Xh-32N" secondAttribute="bottom" id="NUd-R3-w7Z"/>
+                <constraint firstItem="CCW-Xh-32N" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="pxx-bD-gd8"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
                 <outlet property="backupButton" destination="DYs-7h-SgZ" id="xtG-Ic-AnI"/>
-                <outlet property="contentView" destination="CCW-Xh-32N" id="0o6-Wf-Nre"/>
                 <outlet property="messageLabel" destination="0Fl-7M-tPa" id="fib-ol-mG8"/>
                 <outlet property="titleLabel" destination="k5E-h8-knD" id="kwo-2z-XgK"/>
             </connections>
