--- a/Depo/Depo/Presentation/UserStories/Settings/ContactSync/DeleteDuplicatesContacts/DeleteDuplicatesViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/ContactSync/DeleteDuplicatesContacts/DeleteDuplicatesViewController.xib
@@ -13,6 +13,7 @@
                 <outlet property="bottomView" destination="kh1-Pa-u5N" id="Mdd-PK-ezX"/>
                 <outlet property="contentView" destination="5ln-QI-Fxa" id="tRj-hm-iLN"/>
                 <outlet property="deleteAllButton" destination="1kx-de-s0O" id="Xaf-iI-pzc"/>
+                <outlet property="shadowView" destination="LXp-Rc-MDS" id="Gvc-ki-hQl"/>
                 <outlet property="tableView" destination="CCF-W1-1nN" id="uK5-MI-R2U"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="DMh-Gq-APn"/>
             </connections>
@@ -58,6 +59,14 @@
                         <constraint firstItem="1kx-de-s0O" firstAttribute="centerX" secondItem="kh1-Pa-u5N" secondAttribute="centerX" id="whI-aZ-yM0"/>
                     </constraints>
                 </view>
+                <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LXp-Rc-MDS">
+                    <rect key="frame" x="0.0" y="658" width="414" height="22"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="22" id="wJA-HC-SxH"/>
+                    </constraints>
+                    <viewLayoutGuide key="safeArea" id="rgX-MZ-WHT"/>
+                </view>
                 <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5ln-QI-Fxa">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -68,7 +77,10 @@
                 <constraint firstItem="kh1-Pa-u5N" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="24P-Zw-s6n"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="kh1-Pa-u5N" secondAttribute="bottom" id="9gq-Y2-XMY"/>
                 <constraint firstItem="5ln-QI-Fxa" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Aoc-H7-Zbs"/>
+                <constraint firstItem="LXp-Rc-MDS" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="EOX-Ta-YJ4"/>
+                <constraint firstItem="LXp-Rc-MDS" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Ohu-YB-Xh6"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="kh1-Pa-u5N" secondAttribute="trailing" id="PF6-pY-qie"/>
+                <constraint firstItem="kh1-Pa-u5N" firstAttribute="top" secondItem="LXp-Rc-MDS" secondAttribute="bottom" id="RpM-Fr-vsr"/>
                 <constraint firstItem="CCF-W1-1nN" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="W1I-sc-fDY"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="5ln-QI-Fxa" secondAttribute="bottom" id="Zhs-Pq-RNc"/>
                 <constraint firstItem="5ln-QI-Fxa" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="bFl-8g-S0i"/>
