--- a/Depo/Depo/Presentation/UserStories/Grid/HiddenPhotos/HiddenPhotosViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Grid/HiddenPhotos/HiddenPhotosViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,6 +11,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HiddenPhotosViewController">
             <connections>
                 <outlet property="collectionView" destination="7ar-Hf-Tib" id="JYb-sM-xFO"/>
+                <outlet property="contentView" destination="D7b-fq-xCQ" id="3My-jj-qPE"/>
                 <outlet property="sortPanelContainer" destination="YjA-ui-mwR" id="UuE-Sm-D0Z"/>
                 <outlet property="view" destination="iN0-l3-epB" id="tGL-U6-1tU"/>
             </connections>
@@ -20,33 +21,45 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YjA-ui-mwR">
-                    <rect key="frame" x="0.0" y="44" width="414" height="40"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D7b-fq-xCQ">
+                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YjA-ui-mwR">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="40"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="40" id="MOe-Od-Zam"/>
+                            </constraints>
+                        </view>
+                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="7ar-Hf-Tib">
+                            <rect key="frame" x="0.0" y="48" width="414" height="770"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="CUE-jx-E8o">
+                                <size key="itemSize" width="50" height="50"/>
+                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            </collectionViewFlowLayout>
+                        </collectionView>
+                    </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="40" id="MOe-Od-Zam"/>
+                        <constraint firstAttribute="trailing" secondItem="YjA-ui-mwR" secondAttribute="trailing" id="0Ws-xP-iFu"/>
+                        <constraint firstItem="YjA-ui-mwR" firstAttribute="leading" secondItem="D7b-fq-xCQ" secondAttribute="leading" id="9Em-rt-eHE"/>
+                        <constraint firstAttribute="bottom" secondItem="7ar-Hf-Tib" secondAttribute="bottom" id="A8H-bE-ibK"/>
+                        <constraint firstItem="7ar-Hf-Tib" firstAttribute="leading" secondItem="D7b-fq-xCQ" secondAttribute="leading" id="aB7-ey-Y3J"/>
+                        <constraint firstItem="YjA-ui-mwR" firstAttribute="top" secondItem="D7b-fq-xCQ" secondAttribute="top" id="d6d-HN-k58"/>
+                        <constraint firstItem="7ar-Hf-Tib" firstAttribute="top" secondItem="YjA-ui-mwR" secondAttribute="bottom" constant="8" symbolic="YES" id="fKG-hf-1zN"/>
+                        <constraint firstAttribute="trailing" secondItem="7ar-Hf-Tib" secondAttribute="trailing" id="sL2-oP-ajk"/>
                     </constraints>
                 </view>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="7ar-Hf-Tib">
-                    <rect key="frame" x="0.0" y="92" width="414" height="770"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="CUE-jx-E8o">
-                        <size key="itemSize" width="50" height="50"/>
-                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                    </collectionViewFlowLayout>
-                </collectionView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="7ar-Hf-Tib" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="5b6-YO-X6Q"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="7ar-Hf-Tib" secondAttribute="trailing" id="N2q-OP-myr"/>
-                <constraint firstItem="YjA-ui-mwR" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Qfk-qc-gyd"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="YjA-ui-mwR" secondAttribute="trailing" id="VNr-mT-gbO"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="7ar-Hf-Tib" secondAttribute="bottom" id="ezC-eP-4tA"/>
-                <constraint firstItem="YjA-ui-mwR" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="ibj-0y-vSq"/>
-                <constraint firstItem="7ar-Hf-Tib" firstAttribute="top" secondItem="YjA-ui-mwR" secondAttribute="bottom" constant="8" symbolic="YES" id="z5g-Ny-SOO"/>
+                <constraint firstItem="D7b-fq-xCQ" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="4e7-kw-Poc"/>
+                <constraint firstItem="D7b-fq-xCQ" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="af8-gq-4bi"/>
+                <constraint firstItem="D7b-fq-xCQ" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="d7b-sB-NDs"/>
+                <constraint firstItem="D7b-fq-xCQ" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="dux-dc-nzO"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="139" y="134"/>
